--- a/_posts/interviews/2023-03-13-OS.md
+++ b/_posts/interviews/2023-03-13-OS.md
@@ -152,5 +152,15 @@ tags:
 - LFU（最少使用页面置换算法）
 
 ---
+### 虚拟内存和物理内存的映射什么时候发生？此时缺页中断会发生什么？会重新分配内存吗？
 
+1. 启动程序，创建新进程的时候，操作系统会分配虚拟地址空间，通过页表记录虚拟地址到物理地址的对应关系；
 
+发生缺页中断，会分配物理内存，建立新的映射关系。
+
+---
+### OS级别如何实现生产消费模型？共享内存如何保证生产和消费的并发控制
+
+可以通过共享内存或者消息队列
+
+信号量、互斥锁、原子操作
