--- a/_posts/interviews/2023-03-14-Redis.md
+++ b/_posts/interviews/2023-03-14-Redis.md
@@ -22,17 +22,16 @@ tags:
 
 ---
 ### redis为什么设计成单线程？
-避免了多线程并发带来的复杂性和开销。因为reids的大部分操作都是内存操作，而非磁盘操作，因此
-单线程处理能够完全充分利用cpu的性能。单线程可以避免锁和上下文切换等多线程并发带来的开销，
+避免了多线程并发带来的复杂性和开销。因为redis的大部分操作都是内存操作，而非磁盘操作。单线程可以避免锁和上下文切换带来的开销，
 而且，redis还采用了非阻塞io模型，可以处理大量并发连接。
 
 ---
 ### redis线程模式
 Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event handler）。
-- 文件事件处理器使用 I/O 多路复用（multiplexing）程序来同时监听多个套接字，并根据套接字执行的任务来为套接字关联不同的事件处理器。
-- 当被监听的套接字准备好执行连接应答（accept）、读取（read）、写入（write）、关 闭（close）等操作时，与操作相对应的文件事件就会产生，这时文件事件处理器就会调用套接字之前关联好的事件处理器来处理这些事件。
+- 文件事件处理器使用 I/O 多路复用（multiplexing）程序来同时监听多个Socket套接字，会根据套接字执行的任务为套接字关联不同的事件处理器。
+- 当被监听的套接字准备好执行连接应答（accept）、读取（read）、写入（write）、关闭（close）操作时，与操作相对应的文件事件就会产生，这时文件事件处理器就会调用套接字之前关联好的事件处理器来处理这些事件。
 
-> 虽然文件事件处理器以单线程方式运行，但通过使用 I/O 多路复用程序来监听多个套接字，文件事件处理器既实现了高性能的网络通信模型，又可以很好地与 Redis 服务器中其他同样以单线程方式运行的模块进行对接，这保持了 Redis 内部单线程设计的简单性。
+> 虽然文件事件处理器以单线程方式运行，但通过使用 I/O 多路复用程序来监听多个套接字，文件事件处理器实现了高性能的网络通信模型。
 
 > 通过IO多路复用模型连接多个客户端，通过文件事件处理器分配事件处理。
 
@@ -44,13 +43,12 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 - 多种事件处理器（命令请求处理器、命令回复处理器、连接应答处理器、主从连接处理器）
 
 ---
-### Redis的数据结构有哪些？分别适用于哪些场景？
+### Redis的数据类型有哪些？分别适用于哪些场景？
 - String：SDS
-- Hash
-- List
-- Set
+- Hash：dict
+- List：ziplist，quicklist
+- Set：
 - ZSet
-  Redis 支持多种数据结构，每种数据结构都有其特定的用途和适用场景。以下是 Redis 中主要的数据结构及其典型应用场景：
 
 1. **String** 是最基本的数据类型，可以存储字符串、整数或浮点数。
 **适用场景**：
@@ -71,7 +69,7 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 
 4. **Set集合** 没有顺序内容不重复的字符串集合。
 **适用场景**：
-  - 标签系统，给文章打标签，便于查找具有相同标签的文章。
+  - 标签系统，给文章打标签，适合查找具有相同标签的文章。
   - 关注/粉丝系统，维护用户的关注列表和粉丝列表。
   - 随机抽取元素，如抽奖活动中的中奖名单抽取。
 
@@ -87,7 +85,7 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
   - 统计活跃用户数量，按天统计活跃度。
   - 签到功能，记录用户连续签到的情况。
 
-7. **HyperLogLog** 用于基数估计，即估算集合中不同元素的数量。
+7. **HyperLogLog** 用于基数估计，估算集合中不同元素的数量。
 **适用场景**：
   - 统计网站的 UV（Unique Visitor），即独立访客数。
   - 大规模数据集中唯一值的快速统计，误差在可接受范围内。
@@ -99,10 +97,40 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 
 ---
 ### Redis的底层数据结构
-1. ZipList：压缩列表：用于存放少量数据的集合，例如hash、sorted set、list(元素少的话用ziplist或quicklist，元素多的话用linked list或dictionary)
+
+1. ZipList：压缩列表：本身是一个特殊的双向链表，特殊点在于每个entry并不是维护prev、next指针，而是维护上一个entry地址和自身长度。用于存放少量数据的集合，例如hash、sorted set、list(元素少的话用ziplist或quicklist，元素多的话用linked list或dictionary)
+ - zlbytes: ziplist占用的总字节数
+ - zltail：最后一个entry的offset偏移值
+ - zllen：entry的数量(数据元素的数量)
+ - Entry：存储数据的单元，长度可变
+ - zlend：表示ziplist结尾的一个标志，固定值0xFF(255)
+
 ![img.png](../../assets/img2/redis_ziplist.png)
 
+2. SDS：简单动态字符串，可以快速得到字符串长度，优化最佳字符串的操作，(char数据追加数据的话需要重新分配内存，但是sds有一个free字段，可以内存预分配策略，预分配的空间足够的话，就不会进行空间分配。高效追加数据)
+ - len：buffer空间的长度
+ - free：buffer空间剩余空间长度
+ - buf：char[] 实际保存的数据
 
+3. skiplist：用在sorted set，多层链表结构，每一层都是有序的链表，最底层包含所有节点，越上层，元素越少，检索的时候可以跳过不必要的元素。
+ - 查找过程中，先从最上层查找，当找到比目标值大的时候，再回到上一个节点，到上一个节点的下一层，往右查找。这样一层一层的查找。时间复杂度是O(logN)
+ - Sorted Set使用跳表和哈希表实现，跳表用于按分值排序和范围查询，哈希表用于按成员值快速查找。
+
+4. dict: 用于实现hash，实现了渐进式rehash机制，避免一次性rehash造成的阻塞问题；
+
+6. intset：set的一种底层实现。当一个集合元素较少并且都是整形时，用该结构存储，节省空间。
+
+7. linked list：list的一种实现，
+
+8. quick list：list的默认底层实现，由多个ziplist组成的双向链表，每个节点都是一个ziplist。
+
+> 渐进式rehash：普通的hash表在元素数量和桶数量的比值超过一定阈值的时候，就会执行rehash操作，这个时候会调整hash表的大小，把所有键值对重新计算，分配到新的哈希槽里。这个过程如果是一次性完成的话，数据量大的情况下，会导致redis暂时无法处理其他请求。
+> 所以渐进式rehash会在rehash的时候，先分配出一个空的哈希表，然后每次在有新元素插入的时候，除了给新元素分配哈希槽外，再取原哈希表一部分键值对数据分配到新的哈希表上，直到所有数据都在新哈希表上。
+
+---
+### 跳表相对于平衡树在并发场景下的优势
+1. 平衡树需要左旋右旋操作来维持平衡，节点之间的关系比较紧密。并发的时候，需要对整个子树加锁，锁的粒度比较大。
+2. 跳表每层都是独立的有序链表，插入删除操作主要会修改单个节点的前后指针，只需要对单个节点或者单层链表加锁。锁的范围更小
 
 ---
 ### rdb和aof两种持久化机制比较？AOF重写？
@@ -119,6 +147,7 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
   save 300 10   # 300秒内至少有10个键发生变化则触发快照
   save 60 10000 # 60秒内至少有10000个键发生变化则触发快照
   ```
+
 2. **AOF(Append Only File):** AOF 记录服务器接收到的所有写操作命令，并在服务器启动时重新执行这些命令来重建数据集。
 - 优点：
   - 数据安全性更高，几乎不会丢失任何数据（取决于同步策略）。
@@ -141,8 +170,8 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 
 可以使用MULTI和EXEC命令开启事务
 
-1. **`MULTI`**：开启一个事务。输入MULTI之后，redis会把后面的命令加入队列，不会立即执行。
-2. **`EXEC`**：执行事务中的所有命令。Redis 会按顺序依次执行事务队列中的命令，并返回每个命令的结果。
+1. **`MULTI`**：开启一个事务。
+2. **`EXEC`**：执行事务中的所有命令。
 3. **`DISCARD`**：取消事务，清空事务队列中的所有命令。
 4. **`WATCH`**（可选）：监视一个或多个键。如果这些键在事务执行前被其他客户端修改，事务将被取消。
 
@@ -150,6 +179,7 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 
 ---
 ### Redis的几种部署方式？
+
 
 ---
 ### 缓存更新策略有哪几种？内存淘汰机制？
@@ -185,9 +215,9 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 
 ---
 ### 项目中是如何使用redis的？redis使用场景有哪些？
-1. 缓存：把热点数据保存在redia中，减少对后端数据库的访问，提高响应速度；
+1. 缓存：把热点数据保存在redis中，减少对后端数据库的访问，提高响应速度；
 2. 会话存储：在分布式web应用里，redis可以用来集中管理用户会话信息，比传统的基于文件或数据库的会话存储方式会更快；
-3. 消息队列：可以用Lists构建队列，然后用发布订阅模式构建消息队列；
+3. 消息队列：可以用List构建队列，然后用发布订阅模式构建消息队列；
 4. 计数器：可以用Sorted Sets数据结构，实现分数排行榜，还有计数器应用，比如网站点击统计、商品评分；
 5. 分布式锁：可以实现分布式环境下的互斥锁，解决多个节点之间资源竞争的问题；
 6. 限流控制：可以利用redis的原子操作特性，进行API访问速率限制；
@@ -278,6 +308,9 @@ redisson.shutdown();
 ```
 
 ---
+### Redission的看门狗机制
+
+---
 ### redis的管道是什么？如何使用管道提高性能？
 
 redis支持管道，客户端可以一次发送多条命令，最后一起读取返回结果，这样只需要一次网络开销，速度就会得到提升，主要是解决网络io的性能问题。
@@ -344,7 +377,7 @@ Redis中的限流算法有：
 ---
 ### redis哨兵(Redis Sentinel)是什么？如何使用哨兵？
 
-哨兵是redis提供的高可用解决方案，会监控集群内主从节点的运行状态，当主节点宕机，会故障转移，自动将某个从节点选举出新的主节点。
+哨兵是redis提供的高可用解决方案，会监控集群内主从节点的运行状态，当主节点宕机，会故障转移，自动将某个从节点选举成新的主节点。
 
 主要功能：
 1. 监控：监控主从服务器是否正常运行；
