--- a/_posts/interviews/2023-03-13-OS.md
+++ b/_posts/interviews/2023-03-13-OS.md
@@ -23,11 +23,14 @@ tags:
 系统调用的功能主要是对一些底层资源进行控制，比如文件管理（文件打开、关闭、读取、写入）、进程管理（创建、终止）、内存管理这些。
 
 ---
-### 进程和线程
+### 进程和线程？
 
 - 进程是资源分配和调度的基本单元，线程是程序运行的基本单元；
 - 进程内可以有多个线程，多个线程共享进程内资源；
 - 进程之间基本是独立的，但是同一个进程内的线程可能会互相影响。
+
+---
+### 进程分配的资源是什么？
 
 ---
 ### 进程状态
@@ -164,3 +167,47 @@ tags:
 可以通过共享内存或者消息队列
 
 信号量、互斥锁、原子操作
+
+
+---
+### 查看CPU内存占用的指令(top)
+
+
+---
+### channel的底层实现原理？有阻塞的channel
+
+---
+### 进程通信方式
+
+---
+### 遇到较大的文件，用vim打不开怎么办？
+
+---
+### Linux中软连接和硬连接的区别？
+
+---
+### fork()的原理
+
+---
+### fork()会复制哪些东西？
+
+---
+### A进程建立连接后怎么交给B进程去读写？
+
+---
+### 能否让主进程不建立连接，让子进程去创建连接
+
+---
+### 惊群效应
+
+---
+### 操作系统怎么做内存管理的？
+
+---
+### 怎么向操作系统申请内存空间
+
+---
+### jvm分代内存管理和操作系统内存管理的区别
+
+---
+### linux查看进程命令？新建文件？查看文件？
