--- a/_posts/interviews/2023-03-14-Redis.md
+++ b/_posts/interviews/2023-03-14-Redis.md
@@ -48,7 +48,7 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 - Hash：dict
 - List：ziplist，quicklist
 - Set：
-- ZSet
+- ZSet：skiplist，ziplist
 
 1. **String** 是最基本的数据类型，可以存储字符串、整数或浮点数。
 **适用场景**：
@@ -96,6 +96,10 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
   - 物流配送路径规划，根据用户地址推荐最近的服务站。
 
 ---
+### redis的某个key的value是1，那么底层数据是什么？
+
+
+---
 ### Redis的底层数据结构
 
 1. ZipList：压缩列表：本身是一个特殊的双向链表，特殊点在于每个entry并不是维护prev、next指针，而是维护上一个entry地址和自身长度。用于存放少量数据的集合，例如hash、sorted set、list(元素少的话用ziplist或quicklist，元素多的话用linked list或dictionary)
@@ -126,6 +130,9 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 
 > 渐进式rehash：普通的hash表在元素数量和桶数量的比值超过一定阈值的时候，就会执行rehash操作，这个时候会调整hash表的大小，把所有键值对重新计算，分配到新的哈希槽里。这个过程如果是一次性完成的话，数据量大的情况下，会导致redis暂时无法处理其他请求。
 > 所以渐进式rehash会在rehash的时候，先分配出一个空的哈希表，然后每次在有新元素插入的时候，除了给新元素分配哈希槽外，再取原哈希表一部分键值对数据分配到新的哈希表上，直到所有数据都在新哈希表上。
+
+---
+### zset底层实现？什么时候使用跳表，压缩列表？
 
 ---
 ### 跳表相对于平衡树在并发场景下的优势
@@ -251,7 +258,7 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 ### 如何保证缓存和数据库数据的一致性？
 
 ---
-### 如何使用redis实现分布式锁？
+### 如何使用redis实现分布式锁？Lua脚本的作用？Lua脚本如何保证原子操作？执行Lua脚本，redis挂了怎么办？(redis事务无法回滚，可能需要实现回滚撤销的操作)
 1. 加锁：首先用redis的SET命令或SETNX命令实现加锁，SET key value NX EX 30
 2. 解锁：然后解锁的话需要确保只有持有锁的客户端才能删除锁，所以需要结合Lua脚本实现删除锁的操作。del key
 
@@ -308,7 +315,35 @@ redisson.shutdown();
 ```
 
 ---
+### redis分布式锁的粒度是怎么样的？如何实现？
+
+---
+### 分布式锁需要注意哪些细节(如加锁超时时间、释放锁的实现)
+
+---
+### 锁的超时时间应该如何设置？
+
+---
+### 如何处理加锁失败的重试机制？
+
+---
+### 为什么数据库可以事务回滚，redis不行？
+
+---
+### 如何实现撤销回滚的操作？
+
+---
+### RedLock是什么？
+
+---
 ### Redission的看门狗机制
+看门狗机制主要是解决锁自动续期的问题，用redis实现分布式锁的时候一般会设置一个过期时间，防止锁无法释放的问题，但是这个过期时间有可能不一定准确，如果业务逻辑还没执行完，锁就过期了，就会有问题。
+
+redission使用锁的时候，如果不显示指定锁的过期时间的话，redission会默认有一个时间，是30s，然后看门狗后台任务会每10s续期一次。
+
+检查锁是否存在并且属于当前持有者，如果存在的话就延长时间
+
+> 必须在finally块里释放锁。
 
 ---
 ### redis的管道是什么？如何使用管道提高性能？
@@ -360,6 +395,9 @@ Redis中的限流算法有：
 5. 多机部署和容灾：同城双活、异地多活。
 
 ---
+### redis如何保证数据一致性？
+
+---
 ### Redis的主从复制是什么？如何实现主从复制？
 是指redis可以配置多个从数据库，和主数据库保持同步，实现数据读写分离。主数据库可以读写操作，从数据库一般只读。这样可以分散读请求的压力。
 
@@ -387,4 +425,35 @@ Redis中的限流算法有：
 1. 配置sentinel.conf配置文件
 2. 用redis-sentinel /path/to/sentinel.conf启动
 3. 用redis-server /path/to/sentinel.conf --sentinel启动
+
+---
+### Redis扩容
+
+---
+### Redis一致性哈希算法
+redis使用一致性哈希将数据分布在多个实例上，实现负载均衡、分布式缓存。
+
+一致性哈希算法是一种用于分布式系统中对数据进行分片的算法，基本思想就是将所有的数据和节点通过哈希函数映射到
+一个环上，环上的每个位置对应着一个哈希值。当有新的节点加入或节点宕机时，只需要在环上移动一些位置，就能实现
+数据的迁移，从而保证每台服务器上存储的数据量尽量均衡。
+
+---
+### 介绍缓存空对象结合布隆过滤器的流程，布隆过滤器误判怎么办？
+
+---
+### 为什么使用snowflake算法，相比MySQL自增主键呢？
+
+
+---
+### 如何通过Set实现共同关注
+
+---
+### 为什么用SortedSet实现点赞排序
+
+---
+### 如何通过GEO查询附近店铺
+
+---
+### 通过BitMap实现签到时，用什么作为key？
+
 
