--- a/_posts/interviews/2023-03-14-微服务&RPC.md
+++ b/_posts/interviews/2023-03-14-微服务&RPC.md
@@ -122,6 +122,9 @@ Thrift特性：
 - Thrift支持异步非阻塞IO，并发性能高
 
 ---
+### Protocol Buffers为什么能实现高性能框架？自己设计一个RPC框架？
+
+---
 ### 请介绍一下Dubbo框架？如何快速搭建Dubbo服务？
 
 Dubbo是一个高性能的Java分布式服务框架，主要用于构建微服务架构，提供了服务注册与发现、负载均衡、容错机制、服务治理等功能，适合高并发、大规模分布式系统。
