--- a/_posts/interviews/2023-03-14-系统设计.md
+++ b/_posts/interviews/2023-03-14-系统设计.md
@@ -129,3 +129,128 @@ tags:
 ---
 ### 如果一个Trace调用耗时比较长，怎么去进行排查
 
+---
+### 千万数据如何做排序的翻页查询
+
+---
+### 主函数调用了一个三个耗时很长的函数，函数之间无依赖关系，如何减少主函数的执行时间
+
+---
+### 如何设计一个uint64哈希算，能把100长度以内的字符串转成hash值
+
+---
+### 读写并发，一个写线程多个读线程，如何解决并发冲突？
+
+---
+### 电商系统中如何解决高并发下的超卖问题？
+1. 乐观锁(CAS+版本号，如update stock set count = count - 1 where id = xxx and count >= 1)
+2. 分布式锁（Redis的Redisson或Zookeeper实现）
+3. 预扣库存(Redis扣减+消息队列异步落库)
+4. 限流(Sentinel或Guava RateLimiter)
+
+---
+### 使用乐观锁解决超卖问题时，是否有性能挑战(如大量并发下的旋转等待影响响应速度？)有无优化措施？
+
+---
+### 乐观锁在高并发场景下可能有什么问题？
+
+---
+### 如何设计一个秒杀系统
+1. 分层削峰：前端限流(验证码)、中间层缓存(Redis)、后端队列(Kafka异步处理)
+2. 热点数据隔离：Redis集群分片存储商品库存
+3. 无状态服务：服务拆分(秒杀服务独立部署)
+4. 降级策略：熔断(如Hystrix)
+
+---
+### 订单号生成有什么方案？如何保证全局唯一？
+1. snowflake算法，时间戳+机器ID+序列号
+2. 数据库自增
+3. UUID
+4. 业务拼接
+
+---
+### 电商的优惠券系统如何实现？
+1. 数据模型：优惠券模板、用户领劵记录、券状态
+2. 并发问题：用户领券时用redis的INCR防超发
+3. 核销流程：幂等性设计(如订单ID+券ID唯一索引)
+
+---
+### 如何实现购物车功能
+1. 未登录用户：用redis的Hash结果存储(key=临时ID，field=SKU_ID，value=商品数量)
+2. 已登录用户：数据同步到MySQL，缓存双写
+3. 合并逻辑：用户登录后合并临时购物车和DB购物车
+
+---
+### 分布式事务在订单支付场景如何应用？
+1. 消息队列：本地消息表+RocketMQ事务消息
+2. 最大努力通知：支付回调+重试机制
+
+---
+### 电商系统如何做性能监控
+1. 链路追踪：Skywalking/Pinpoint追踪微服务调用链
+2. 指标监控：Prometheus+Grafana监控QPS，RT
+3. 日志分析：ELK收集异常日志
+4. JVM调优：Arthas诊断线上问题
+
+---
+### 拓扑排序
+
+---
+### 介绍洗牌算法，就是现在有一个数组，要将顺序随机打乱，如何实现？
+
+---
+### 尾递归
+
+---
+### git merge 和 git rebase 区别
+
+---
+### 自己实现lru
+
+---
+### 怎么理解责任链模式
+
+---
+### 享元模式
+
+---
+### 64匹马，8个赛道，如何选出最快的四匹？
+
+---
+### 给定一个16bit的随机数生成函数，实现一个64bit的随机数生成函数
+
+---
+### 给定整形的随机生成函数，比如random64，实现一个浮点型的随机数生成函数，这个函数输入一个范围，比如a，b，表示大于等于a，小于b之间的随机浮点数。a和b本身也是浮点数
+
+---
+### 加权随机，在N个对象当中随机的选择，每个对象有一个概率权重，怎么实现？
+
+---
+### 服务器有1T的数据，磁盘总空间不止一个T，1T数据中有很多字符串组成的，从这些数据中找出出现次数最高的前1000个
+
+---
+### 两个文件，每个文件有10亿个URL，给你一个内存很小的计算机，找出两个文件中相等的URL？(分治思想+分片哈希)
+
+---
+### xxljob，一个任务执行耗时很长，会怎么处理？
+
+---
+### 有10亿数据，找出最大的100个(考虑内存与不考虑内存)
+
+---
+### 怎么设计RPC
+
+---
+### 两个字符串都是用数字组成的，对两个数字做加法，如果字符串超大怎么写?
+
+---
+### 很大的数据，但是只有很小的内存，怎么排序
+
+---
+### java实现用户短视频一分钟只能最多有10个点赞
+
+---
+### 智力题：烧绳子，一根绳子烧完需要1小时，如何计时15分钟，30分钟，45分钟
+
+---
+### 电脑微信扫码登录的实现？三端请求的过程？
