--- a/_posts/interviews/2023-03-13-OS.md
+++ b/_posts/interviews/2023-03-13-OS.md
@@ -180,6 +180,14 @@ tags:
 ### 进程通信方式
 
 ---
+### 怎么给进程发信号
+用kill命令，可以指定信号的编号，比如-9就是杀死目标进程。还有很多编号，可以用kill -l查看所有编号
+
+---
+### kill内部是有什么过程
+kill会给进程发送SIGTERM信号，要求它优雅地停止服务。如果服务无法正常停止，可以使用SIGKILL信号强制终止服务。
+
+---
 ### 遇到较大的文件，用vim打不开怎么办？
 
 ---
