--- a/_posts/interviews/2023-03-14-系统设计.md
+++ b/_posts/interviews/2023-03-14-系统设计.md
@@ -205,6 +205,13 @@ tags:
 ### git merge 和 git rebase 区别
 
 ---
+### git rebase什么意思
+合并多个commit
+
+---
+### cherry pick是什么命令
+
+---
 ### 自己实现lru
 
 ---
@@ -254,3 +261,10 @@ tags:
 
 ---
 ### 电脑微信扫码登录的实现？三端请求的过程？
+
+---
+### 发布服务的时候，怎么预热服务？
+- 提前加载缓存
+- 数据库的连接池预热
+- redis将热点数据加载到缓存中
+- innodb存储引擎有buffer_pool，缓存池，可以进行数据库的预热。
