--- a/_posts/interviews/面经/2023/2023-05-11-字节.md
+++ b/_posts/interviews/面经/2023/2023-05-11-字节.md
@@ -15,8 +15,9 @@ mysql连接的时候会根据不同条件选择不同的嵌套循环算法。
 - 在使用索引关联的情况下，有Index Nested-Loop join，索引嵌套循环，和Batched Key Access join两种算法；
 - 在没有使用索引关联的情况下，有Simple Nested-Loop join，简单嵌套循环，和Block Nested-Loop join两种算法；
 1. SNL 简单嵌套循环 就是逐条逐条匹配，就是遍历第一个表的每条记录，再嵌套遍历第二个表的记录，再判断是否满足join条件；MySQL一般不会使用这种算法；
-2. BNL 缓存快嵌套循环连接，会一次性缓存驱动表的多条数据到缓存中，然后拿缓存里的数据批量和内层循环读取的数据进行匹配；当on的连接键没有索引时会用这种算法；
-3. INL 索引嵌套循环，是基于被驱动表的索引进行连接的算法，驱动表的记录逐条与被驱动表的索引进行匹配，避免和被驱动表的每条记录进行比较，减少匹配次数；**执行步骤：**先逐行扫描表1的记录，然后到表2里按索引匹配，如果表2的索引是非覆盖索引，还需要回表查询数据；
+2. BNL 缓存块嵌套循环连接，会一次性缓存驱动表的多条数据到缓存中，然后拿缓存里的数据批量和内层循环读取的数据进行匹配；当on的连接字段没有索引时会用这种算法；
+3. INL 索引嵌套循环，是基于被驱动表的索引进行连接的算法，驱动表的记录逐条与被驱动表的索引进行匹配，避免和被驱动表的每条记录进行比较，减少匹配次数；
+ - **执行步骤：**先逐行扫描表1的记录，然后到表2里按索引匹配，如果表2的索引是非覆盖索引，还需要回表查询数据；
 4. BKA 是对INL优化后的联表算法，会用到MRR，把随机IO优化成顺序IO，提高查询效率。
 
 **使用join需要注意的：**
@@ -24,49 +25,6 @@ mysql连接的时候会根据不同条件选择不同的嵌套循环算法。
 - 但是当使用的是分块嵌套查询时，扫描行数是两张表行数的乘积，扫描行数非常大，会占用大量的系统资源，这个时候是不建议使用join的。
 - 如果要使用join，一定要使用小表作为驱动表。什么样的是小表呢？同一条件下两张表哪个检索的数据量小，那张表就是小表。
 - 什么是驱动表？当指定了连接条件时，满足条件并记录行数少的表就是驱动表。
-
----
-### 间隙锁
-什么是间隙锁？
-- 间隙锁不仅锁定一个记录上的索引，也锁定索引之间的间隙；
-
----
-### 可重复读事务隔离级别的实现原理？
-- 读取数据的时候，事务对当前被读取的数据不加锁，并且是快照读；
-- 更新数据的时候，事务在更新数据的瞬间，必须对数据加行级排它锁（record lock,gap lock,next-key lock）,直到事务结束才释放。
-
-> 通过间隙锁，mysql可以在可重复读隔离级别解决幻读的问题。
-
----
-### redis hash数据结构的底层结构？
-
-哈希类型的内部编码有两种：
-- ziplist（压缩列表）：ziplist是一种更紧凑的结构，就是一种双向链表，但是这个链表的每个节点都是连续的存储在内存中，比较紧凑，会减少内存碎片，所以比hashtable更节省内存；当一个Hash对象键值对比较少的时候，并且没有大的value时，内部编码是ziplist；
-- hashtable（哈希表）：当有元素的value值超过64字节，或者键值对个数超过阈值512个的时候，内部编码会变为hashtable的形式；
-
----
-### binlog有几种格式？
-
-- statement（SBR）:记录的是修改数据的sql，每一条会修改数据的sql都会记录在binlog里；
-- row（RBR）:记录的是每条记录被修改的结果，不记录sql语句上下文信息，只保存哪条记录被修改；
-- mixed（MBR）:statement和row的混合体。
-
----
-### redis集群主从数据同步会带来什么问题，数据不同步怎么解决？
-
-- 忽略：根据业务特点，如果业务能接收不一致就最好
-- 强制读主：使用一个高可用主库提供数据服务，读和写都从主库操作，可以采用缓存来提升系统读性能
-- 选择性读主节点：在cache里记录哪些记录发生过写请求，来路由读主还是读从
-
-**数据不同步怎么办：** 不同步可能是网络延迟的问题，也可能是主节点或从节点服务器的延迟问题。可以进入redis查看同步状态。
-- 用INFO replication命令可以显示主从复制的连接状态、复制偏移量；
-- 可以用ping一下检查通信延迟；
-- 也可以用PSYNC命令手动触发复制过程；
-
-**怎么解决主从不一致：**
-- 重新建立主从关系，用SLAVEOF命令重新把主从关系建立起来；
-- 设置一些配置项，比如可以设置从节点滞后多少时主节点停止写操作；
-- 设置哨兵和集群模式，用哨兵节点监控主从节点状态。
 
 ---
 ### redis全量更新和增量更新怎么更新的？
@@ -79,10 +37,8 @@ mysql连接的时候会根据不同条件选择不同的嵌套循环算法。
 5. 从节点接收到写命令之后，重放到自己的数据集中，让主从节点的数据保持一致；
 6. 全量同步之后，开始进行增量同步。
 
-
 全量同步流程：
 ![redis_full_sync.png](../../../assets/img2/redis_full_sync.png)
-
 
 增量同步流程：
 1. 首先从节点向主节点发送PSYNC replid offset命令，进行增量同步请求；
