--- a/_posts/interviews/面经/2023/2023-05-12-途虎养车.md
+++ b/_posts/interviews/面经/2023/2023-05-12-途虎养车.md
@@ -41,17 +41,11 @@ Runtime.getRuntime().addShutdownHook(new Thread(){
 ### 如何查看问题？
 
 ---
-### git rebase什么意思
-合并多个commit
-
----
 ### 版本依赖怎么办
 
-用一个工具叫dependency analyzer插件，会现实冲突的依赖，排除有冲突的依赖。
+用一个工具叫dependency analyzer插件，会显示冲突的依赖，排除有冲突的依赖。
 
 排除依赖：用exclusions排除子元素
 
----
-### cherry pick是什么命令
 
 
