--- a/_posts/interviews/2023-03-14-Redis.md
+++ b/_posts/interviews/2023-03-14-Redis.md
@@ -21,6 +21,21 @@ tags:
 4. redis使用简单高效的数据结构，比如字符串、哈希表、列表、集合，能够在常数时间或对数时间内完成操作；
 
 ---
+### redis为什么快？
+
+1. 数据存放在内存中，读写速度快
+2. 内置的高效的数据结构：比如字符串、哈希表、列表、集合等
+3. 单线程架构：redis使用单线程模型，避免了线程切换和锁竞争等多线程带来的开销和风险
+4. 异步IO：redis使用异步IO模型，利用操作系统底层的epoll、kqueue等事件管理机制，保证了高并发下的高效访问
+5. 轻量级：redis代码量非常少，功能简单。
+
+---
+### redis为什么单线程模型都很快？
+
+redis采用单线程模型的主要原因是为了避免多线程并发带来的线程切换开销，并且将所有的数据存储在内存中，避免了
+磁盘IO带来的延迟。而且，redis内部使用了多路复用技术，可以在单线程下处理多个并发连接，从而提高了吞吐量。
+
+---
 ### redis为什么设计成单线程？
 避免了多线程并发带来的复杂性和开销。因为redis的大部分操作都是内存操作，而非磁盘操作。单线程可以避免锁和上下文切换带来的开销，
 而且，redis还采用了非阻塞io模型，可以处理大量并发连接。
@@ -41,6 +56,22 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 - IO多路复用程序
 - 文件事件分派器
 - 多种事件处理器（命令请求处理器、命令回复处理器、连接应答处理器、主从连接处理器）
+
+---
+### redis数据结构
+1. String字符串：由SDS简单动态字符串构成
+2. List列表：由LinkedList、QuickList、ZipList构成
+3. Hash字典：由HashTable、ZipList构成
+4. Set集合：由IntSet、ZipList构成
+5. ZSet有序集合：由SkipList、ZipList构成
+
+- SDS简单动态字符串
+- ZipList压缩列表：很通用，上面由四种数据结构都有这种实现。
+- SkipList跳跃表
+- HashTable哈希表
+- LinkedList双向链表
+- IntSet整数集合
+- QuickList快速列表
 
 ---
 ### Redis的数据类型有哪些？分别适用于哪些场景？
@@ -132,7 +163,23 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 > 所以渐进式rehash会在rehash的时候，先分配出一个空的哈希表，然后每次在有新元素插入的时候，除了给新元素分配哈希槽外，再取原哈希表一部分键值对数据分配到新的哈希表上，直到所有数据都在新哈希表上。
 
 ---
+### redis SDS相比C快在哪？
+1. SDS有字符串长度字段，能够快速获取字符串长度。
+2. SDS能够自动扩展空间来保存字符串，减少了缓存区溢出的情况。
+3. SDS做了很多内存预分配和内存重用的优化，因此在对字符串进行频繁修改的场景下，SDS的性能比传统字符串更好。
+4. 二进制安全，SDS对字符串的操作不依赖于空字符，支持保存任何二进制数据，因此更加灵活。
+
+> 传统字符串使用空字符作为字符串的结尾标志，因此不能保存包含空字符在内的二进制数据。
+> 而SDS使用字符串长度来标记字符串的结束，因此可以保存任何二进制数据。
+
+---
 ### zset底层实现？什么时候使用跳表，压缩列表？
+
+---
+### redis hash数据结构的底层结构？
+哈希类型的内部编码有两种：
+- ziplist（压缩列表）：ziplist是一种更紧凑的结构，就是一种双向链表，但是这个链表的每个节点都是连续的存储在内存中，比较紧凑，会减少内存碎片，所以比hashtable更节省内存；当一个Hash对象键值对比较少的时候，并且没有大的value时，内部编码是ziplist；
+- hashtable（哈希表）？存疑？：当有元素的value值超过64字节，或者键值对个数超过阈值512个的时候，内部编码会变为hashtable的形式；
 
 ---
 ### 跳表相对于平衡树在并发场景下的优势
@@ -204,6 +251,19 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 - allkeys-lfu：从所有键中选择最不经常使用的键淘汰；
 
 ---
+### 更新缓存策略？
+延迟双删：先删除缓存项，更新数据库项，等待一段时间后，再次删除缓存。防止删除缓存后但数据库更新前其他线程把旧数据再次加载到缓存。
+
+---
+### redis淘汰策略
+1. volatile LRU
+2. volatile TTL
+3. volatile Random
+4. allKeys LRU
+5. allKeys Random
+6. no evictions
+
+---
 ### 常见的缓存读写策略有哪些？
 
 ---
@@ -253,6 +313,25 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 
 解决方法：如果是redis服务自身不可用，可以采用redis集群，避免单机出现问题导致整个缓存服务没办法使用。
 如果是热点缓存大面积同时失效，可以设置不同的失效时间，比如随机设置缓存的失效时间。或者设置二级缓存。
+
+
+---
+### 缓存穿透
+数据在缓存和数据库中都不存在，会导致数据库负载过高
+布隆过滤器：布隆过滤器判断不存在则一定不存在，如果判断存在则有可能存在。
+1. 预先加载所有数据到布隆过滤器
+2. 有新请求时，先到布隆过滤器查询是否存在，
+
+---
+### 大量请求的缓存失效如何解决？
+
+1. 缓存预热
+
+2. 设置不同的过期时间
+
+3. 缓存分级，本地缓存+远程缓存，如果远程缓存失效，再从本地缓存读取
+
+4. 数据库降级
 
 ---
 ### 如何保证缓存和数据库数据的一致性？
@@ -313,6 +392,14 @@ try {
 
 redisson.shutdown();
 ```
+
+---
+### 用redis实现分布式锁？
+1. 设置一个键值对到redis上，键是锁的标识符，值是不同客户端的uuid；
+2. 使用的时候先加锁，使用完执行Lua脚本删除键值对，解锁。
+
+> SET key value NX PX milliseconds   NX:仅当键不存在的时候才设置，PX设置过期时间，防止死锁。
+
 
 ---
 ### redis分布式锁的粒度是怎么样的？如何实现？
@@ -395,7 +482,32 @@ Redis中的限流算法有：
 5. 多机部署和容灾：同城双活、异地多活。
 
 ---
+### redis 哨兵节点和cluster节点有什么区别？什么情况使用哪种部署方式？
+这个题目应该说的是redis的哨兵和集群两种部署模式。
+
+- 哨兵模式：可以提供高可用性，可以检测redis主节点故障，发生故障时可以进行故障转移；适合简单主从架构的场景，不需要大规模数据集或者不需要水平扩展的场景。
+
+- 集群模式：是一种分布式的部署方案，数据分布在多个节点上，可以实现数据分片，支持弹性扩展；主要适用于大量数据、高并发的场景。
+
+---
 ### redis如何保证数据一致性？
+
+---
+### redis集群主从数据同步会带来什么问题，数据不同步怎么解决？
+
+- 忽略：根据业务特点，如果业务能接收不一致就最好
+- 强制读主：使用一个高可用主库提供数据服务，读和写都从主库操作，可以采用缓存来提升系统读性能
+- 选择性读主节点：在cache里记录哪些记录发生过写请求，来路由读主还是读从
+
+数据不同步怎么办：不同步可能是网络延迟的问题，也可能是主节点或从节点服务器的延迟问题。可以进入redis查看同步状态。
+- 用INFO replication命令可以显示主从复制的连接状态、复制偏移量；
+- 可以用ping一下检查通信延迟；
+- 也可以用PSYNC命令手动触发复制过程；
+
+怎么解决主从不一致：
+- 重新建立主从关系，用SLAVEOF命令重新把主从关系建立起来；
+- 设置一些配置项，比如可以设置从节点滞后多少时主节点停止写操作；
+- 设置哨兵和集群模式，用哨兵节点监控主从节点状态。
 
 ---
 ### Redis的主从复制是什么？如何实现主从复制？
@@ -456,4 +568,8 @@ redis使用一致性哈希将数据分布在多个实例上，实现负载均衡
 ---
 ### 通过BitMap实现签到时，用什么作为key？
 
-
+---
+### smember大量数据怎么避免
+smember会返回集合内的全部数据，可能导致内存溢出，或网络传输开销大，导致执行时间较长。
+1. 分批获取数据
+2. 压缩数据
