--- a/_posts/interviews/面经/2023/2023-05-15-快手.md
+++ b/_posts/interviews/面经/2023/2023-05-15-快手.md
@@ -13,7 +13,7 @@ tags:
 1. 可以设置expireAfterAccess，和expireAfterWrite，也可以自定义expireAfter()方法；
 2. 容量可以设置maximumSize(),也可以基于权重，每个缓存项设置权重，设置一个总权重。
 
-```sbt
+```scala
   // cache存放的结构是campaignId和customerId
   private val cache: LoadingCache[Long with AnyRef, Long with AnyRef] = CacheBuilder.newBuilder().recordStats
           .maximumSize(MAX_CACHE_SIZE)
@@ -23,14 +23,6 @@ tags:
 ```
 
 ---
-### kafka快体现在哪里，为什么快？
-Kafka支持高性能、低延迟的数据传输，主要是它的架构和采用的一些技术有关。
-1. 零拷贝：允许数据直接从文件系统复制到网络接口，加快了数据传输速度；
-2. kafka的消息支持批量发送，而且可以压缩，减小了网络开销；
-3. kafka写入磁盘是顺序写，而不是随机写，减少了磁盘的寻道时间；
-4. kafka一个主题可以分成多个分区，每个分区都是独立的并发单元；
-
----
 ### kafka 如果12345顺序，接收到的是2怎么保证有序性？ 什么场景会要求有序性？
 
 ---
@@ -38,17 +30,6 @@ Kafka支持高性能、低延迟的数据传输，主要是它的架构和采用
 
 ---
 ### UDF hadoop
-
----
-### spark RDD
-RDD是Spark的弹性分布式数据集，表示一个元素集合，RDD里的数据可以分布在不同的节点上。
-
-核心特性：
-1. 不可变：对RDD做转换之后会生成新的RDD；
-2. RDD的数据是分布在不同分区的，每个分区分布在集群不同的节点上；
-3. RDD有自动的容错机制，假设某个分区数据丢失，还是可以重新计算，重建出来；
-4. RDD支持很多操作，比如map、filter、union、groupByKey、reduceByKey
-
 
 ---
 ### ocpx超成本，欠成本怎么做？赔付
