--- a/_posts/interviews/2023-03-14-DB.md
+++ b/_posts/interviews/2023-03-14-DB.md
@@ -339,13 +339,16 @@ B+树特点：
 1. SELECT ... FOR UPDATE:排他锁
    用上面语句执行查询时，会对查询结果的每一行加上排他锁，直到当前事务结束
 ```roomsql
+
 START TRANSACTION;
 SELECT * FROM accounts WHERE id = 1 FOR UPDATE;
 
 UPDATE accounts SET balance = balance - 100 WHERE id = 1;
 
 COMMIT;
+
 ```
+
 2. SELECT ... LOCK IN SHARE MODE:共享锁
    会给查询到的行加共享锁，其他事务也可以加共享锁但是不能加排他锁，适用于只读场景。
 
@@ -408,10 +411,11 @@ InnoDB中的聚簇索引：
 7. 覆盖索引:不是一个独立的索引类型，指的是一个索引如果包含了查询所需的所有列，则可以直接从索引中获取数据而无需访问表的数据行。通过索引直接提供查询所需的所有数据
 
 ```roomsql
-//创建唯一索引
+
 CREATE UNIQUE INDEX ON TABLE_NAME (COL1,COL2...);
-//创建普通索引
+
 CREATE INDEX ON TABLE_NAME (COL1,COL2...);
+
 ```
 
 > 一个组合索引也可以同时是一个覆盖索引，两者并不互斥；
@@ -761,6 +765,33 @@ hive.default.format配置存储格式，默认是Text file
 
 ---
 ### sql having？
+- having是在聚合后进行过滤，where是在聚合前过滤行数据；
+- 可以使用count，sum函数
+
+例子：
+查询平均成绩大于80分的班级
+```roomsql
+SELECT class_id, AVG(score) AS avg_score
+FROM students
+GROUP BY class_id
+HAVING AVG(score) > 80;  -- 筛选分组后的平均值
+```
+
+查询每个部门中薪资总和超过 100 万且人数超过 5 人的分组
+```roomsql
+SELECT department, position, SUM(salary) AS total_salary, COUNT(*) AS emp_count
+FROM employees
+GROUP BY department, position
+HAVING total_salary > 1000000 AND emp_count > 5;
+```
+
+查询订单数超过 3 且总金额超过 1000 的客户。
+```roomsql
+SELECT customer_id, COUNT(order_id) AS order_count, SUM(amount) AS total_amount
+FROM orders
+GROUP BY customer_id
+HAVING order_count > 3 AND total_amount > 1000;
+```
 
 ---
 ### 如果数据库连接池有500连接，但高流量达到了上万，如何处理？乐观锁的问题是什么？限流之外是否有其他解决方案？
