--- a/_posts/interviews/2023-03-14-DB.md
+++ b/_posts/interviews/2023-03-14-DB.md
@@ -825,12 +825,22 @@ spring:
 
 ---
 ### 执行UPDATE语句时，锁是加在线程还是数据库对象上？
+加载数据表或行记录上，如果查询条件命中索引的话，锁是行级锁，会加临键锁；如果没有命中索引，则是表级锁；
 
 ---
 ### SQL优化:select * from table where a > ? and b = ? or c = ? order by d decs limit 10
+1. 不要用select * ，要列出想要的列；
+2. 不要用or，可以用两个查询，然后union all
+3. 创建覆盖索引，覆盖查询条件
+4. 最后改完后，用explain查看，重点看key列和extra列
+5. 虽然在where条件里a排在前面，但是a是范围查询，sql优化器会先判断b和c，再判断a条件，所以创建索引的时候应该bc在前，a在后面
+
+> 最后创建的两个联合索引是(b,d,a,c)和(c,d,a,b)。
 
 ---
 ### sql实现，实现一个死锁情况，必须是必然发生
+- 创建两个事务，一个事务先更新id=1的记录，再随眠几秒，然后更新id=2的记录；
+- 另一个事务先更新id=2的记录，再随眠几秒，然后更新id=1的记录；
 
 ---
 ### mysql 行转列？ 列转行？
