--- a/_posts/interviews/2023-03-14-Redis.md
+++ b/_posts/interviews/2023-03-14-Redis.md
@@ -128,7 +128,7 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 
 ---
 ### redis的某个key的value是1，那么底层数据是什么？
-
+INT？ptr直接存1？
 
 ---
 ### Redis的底层数据结构
@@ -279,6 +279,9 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 
 ---
 ### 如何判断缓存过期？
+用命令TTL key
+- 返回-1表示永不过期
+- 返回-2表示键不存在(已过期被删除)
 
 ---
 ### 项目中是如何使用redis的？redis使用场景有哪些？
@@ -313,7 +316,6 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 
 解决方法：如果是redis服务自身不可用，可以采用redis集群，避免单机出现问题导致整个缓存服务没办法使用。
 如果是热点缓存大面积同时失效，可以设置不同的失效时间，比如随机设置缓存的失效时间。或者设置二级缓存。
-
 
 ---
 ### 缓存穿透
@@ -399,7 +401,6 @@ redisson.shutdown();
 2. 使用的时候先加锁，使用完执行Lua脚本删除键值对，解锁。
 
 > SET key value NX PX milliseconds   NX:仅当键不存在的时候才设置，PX设置过期时间，防止死锁。
-
 
 ---
 ### redis分布式锁的粒度是怎么样的？如何实现？
