--- a/_posts/interviews/2023-03-14-Redis.md
+++ b/_posts/interviews/2023-03-14-Redis.md
@@ -404,24 +404,39 @@ redisson.shutdown();
 
 ---
 ### redis分布式锁的粒度是怎么样的？如何实现？
+看key的设置，key可以是粗粒度的，也可以是细粒度的，比如只锁某个具体id的记录
 
 ---
 ### 分布式锁需要注意哪些细节(如加锁超时时间、释放锁的实现)
+1. 设置超时时间 结合Redisson的watchdog机制
+2. 使用Lua脚本保证原子性
+3. 使用try finally释放锁
 
 ---
 ### 锁的超时时间应该如何设置？
+- 业务耗时*1.5   30s
+- 使用锁续期机制，Redisson的watchdog机制
 
 ---
 ### 如何处理加锁失败的重试机制？
+- 设置超时时间
+- 可以固定延迟重试
+- 带上最大重试次数
 
 ---
 ### 为什么数据库可以事务回滚，redis不行？
+- 数据库基于undo log记录事务前的数据，提交事务时，先将日志写入磁盘，然后更新数据。所以支持回滚
+- redis事务中如果中途某个命令失败了，会报错，但不会回滚
+- redis数据是缓存，数据可能丢失或过期，不需要强一致性。回滚机制需要日志记录，会影响性能
 
 ---
 ### 如何实现撤销回滚的操作？
+1. 使用Lua脚本保证多步操作要么全部执行，要么不执行，保证原子性；
+2. 记录操作前的旧值，当事务执行中途失败时，手动回滚；
 
 ---
 ### RedLock是什么？
+实现分布式锁的一种方式，向集群内的每个节点都发送加锁请求，返回一半以上的成功表示加锁成功。
 
 ---
 ### Redission的看门狗机制
@@ -541,6 +556,7 @@ Redis中的限流算法有：
 
 ---
 ### Redis扩容
+使用Redis Cluster实现分布式解决方案，支持自动分片和故障转移
 
 ---
 ### Redis一致性哈希算法
@@ -555,19 +571,35 @@ redis使用一致性哈希将数据分布在多个实例上，实现负载均衡
 
 ---
 ### 为什么使用snowflake算法，相比MySQL自增主键呢？
+两个都是生成唯一标识符的方法。
+snowflake是用在分布式环境，生成全局唯一ID，MySQL自增主键使用于单个数据库实例。
 
 
 ---
 ### 如何通过Set实现共同关注
+两个用户的关注列表需要计算共同关注时，用SINTER命令获取两个set的交集。
 
 ---
 ### 为什么用SortedSet实现点赞排序
+1. 出现一条评论时，用ZADD加入一个Sorted Set中：ZADD posts:likes 0 comment_id
+2. 增加点赞时，用ZINCRBY增加点赞数：ZINCRBY posts:likes 1 comment_id
+3. 取消点赞时，用ZINCRBY减少点赞数：ZINCRBY posts:likes -1 comment_id
+4. 获取排名前N的评论：ZREVRANGE posts:likes 0 N-1 WITHSCORES
 
 ---
 ### 如何通过GEO查询附近店铺
+1. 添加店铺位置信息：GEOADD shops 120.34 30.34 "shopA" 
+2. 查询附近店铺：GEORADIUS shops 120.44 30.23 10 km WITHDIST ASC
+
+> 内部是用GeoHash算法
 
 ---
 ### 通过BitMap实现签到时，用什么作为key？
+key中可以包括用户id，日期信息，这样可以获取某个用户在某段日期范围内的签到次数，
+
+- SETBIT sign_in:12345 dayOffset 1
+- GETBIT sign_in:12345 dayOffset
+- BITFIELD sign_in:12345 GET u40 0
 
 ---
 ### smember大量数据怎么避免
