--- a/_posts/interviews/2023-03-14-系统设计.md
+++ b/_posts/interviews/2023-03-14-系统设计.md
@@ -128,18 +128,27 @@ tags:
 
 ---
 ### 如果一个Trace调用耗时比较长，怎么去进行排查
+1. 使用分布式追踪系统组件，比如Zipkin，SkyWalking。找到耗时较长的Trace ID，分析其中每个Span（跨度）的时间消耗情况
+2. 性能监控，查看日志记录，设置报警阈值
 
 ---
 ### 千万数据如何做排序的翻页查询
+记录上一页的时间，然后再where条件里过滤这个时间，然后再limit 10分页
 
 ---
 ### 主函数调用了一个三个耗时很长的函数，函数之间无依赖关系，如何减少主函数的执行时间
+改成异步调用。
+1. 创建三个线程，每个线程执行对应任务。
+2. 创建线程池，submit每个任务。
+3. 使用CompletableFuture。CompletableFuture.allOf(f1, f2, f3).get();
 
 ---
-### 如何设计一个uint64哈希算，能把100长度以内的字符串转成hash值
+### 如何设计一个uint64哈希算法，能把100长度以内的字符串转成hash值
 
 ---
 ### 读写并发，一个写线程多个读线程，如何解决并发冲突？
+- 允许多个读线程同时读取；
+- 写线程独占资源，其他线程（包括读线程）必须等待
 
 ---
 ### 电商系统中如何解决高并发下的超卖问题？
@@ -150,9 +159,16 @@ tags:
 
 ---
 ### 使用乐观锁解决超卖问题时，是否有性能挑战(如大量并发下的旋转等待影响响应速度？)有无优化措施？
+是的，如果有频繁发生冲突，可能导致大量的重试操作和旋转等待。
+
+优化：
+1. 限制最大重试次数
+2. 指数退避，每次重试，增加等待时间
+3. 限流
 
 ---
 ### 乐观锁在高并发场景下可能有什么问题？
+乐观锁的原理不加锁，而是通过版本号或时间戳等机制来检测数据是否被其他事务修改过
 
 ---
 ### 如何设计一个秒杀系统
@@ -197,6 +213,10 @@ tags:
 
 ---
 ### 介绍洗牌算法，就是现在有一个数组，要将顺序随机打乱，如何实现？
+1. 从最后一个元素往前遍历
+2. 对于当前元素，随机选择一个范围在[0,当前索引]的一个索引
+3. 将当前元素，与目标索引的元素交换位置，
+4. 向前一步，直到遍历完所有元素。
 
 ---
 ### 尾递归
@@ -222,12 +242,16 @@ tags:
 
 ---
 ### 64匹马，8个赛道，如何选出最快的四匹？
+10或11
 
 ---
 ### 给定一个16bit的随机数生成函数，实现一个64bit的随机数生成函数
 
 ---
 ### 给定整形的随机生成函数，比如random64，实现一个浮点型的随机数生成函数，这个函数输入一个范围，比如a，b，表示大于等于a，小于b之间的随机浮点数。a和b本身也是浮点数
+1. 先用给定的随机数生成函数生成一个随机数
+2. 然后将该随机数归一化为[0.0, 1.0)之间的一个小数 unit
+3. 然后映射到[a,b)的范围：  a + (b-1) * unit
 
 ---
 ### 加权随机，在N个对象当中随机的选择，每个对象有一个概率权重，怎么实现？
@@ -257,7 +281,10 @@ tags:
 ### java实现用户短视频一分钟只能最多有10个点赞
 
 ---
-### 智力题：烧绳子，一根绳子烧完需要1小时，如何计时15分钟，30分钟，45分钟
+### 智力题：烧绳子，不均匀的一根绳子烧完需要1小时，如何计时15分钟，30分钟，45分钟
+1. 半小时:从两端开始烧，烧完的时间就是半小时
+2. 15分钟：取两个绳子，一根从两端烧，另一根从一端烧；当第一根烧完时，熄灭第二根，此时第二根在从两端烧就是15分钟
+3. 45分钟：上面两个步骤的时间就是45分钟
 
 ---
 ### 电脑微信扫码登录的实现？三端请求的过程？
