--- a/_posts/interviews/2023-03-14-系统设计.md
+++ b/_posts/interviews/2023-03-14-系统设计.md
@@ -246,6 +246,9 @@ tags:
 
 ---
 ### 给定一个16bit的随机数生成函数，实现一个64bit的随机数生成函数
+result = (result << 16) | random16()
+
+通过左移，再按位或，拼接4个
 
 ---
 ### 给定整形的随机生成函数，比如random64，实现一个浮点型的随机数生成函数，这个函数输入一个范围，比如a，b，表示大于等于a，小于b之间的随机浮点数。a和b本身也是浮点数
@@ -255,24 +258,35 @@ tags:
 
 ---
 ### 加权随机，在N个对象当中随机的选择，每个对象有一个概率权重，怎么实现？
+1. 计算出权重总和
+2. 随机生成一个数
+3. 判断该数落在哪个对象上
 
 ---
 ### 服务器有1T的数据，磁盘总空间不止一个T，1T数据中有很多字符串组成的，从这些数据中找出出现次数最高的前1000个
+如果使用Spark来做，就可以很快
+
+思想是：MapReduce的思想。分成很多个小文件，对每个小文件统计词频，最后reduce
 
 ---
 ### 两个文件，每个文件有10亿个URL，给你一个内存很小的计算机，找出两个文件中相等的URL？(分治思想+分片哈希)
+- 将A文件分成N个文件
+- 将B文件也分成N个文件 并且使用同一个hash函数分片，这样相同的URL会被分到同一个下标的小文件中。
+- 一对一对比较A中的小文件和B中的小文件。选出所有相同的URL。
 
 ---
 ### xxljob，一个任务执行耗时很长，会怎么处理？
 
 ---
 ### 有10亿数据，找出最大的100个(考虑内存与不考虑内存)
+最小堆
 
 ---
 ### 怎么设计RPC
 
 ---
 ### 两个字符串都是用数字组成的，对两个数字做加法，如果字符串超大怎么写?
+模拟加法，从后往前加法，用carry表示进位
 
 ---
 ### 很大的数据，但是只有很小的内存，怎么排序
