--- a/_posts/interviews/2023-03-13-OS.md
+++ b/_posts/interviews/2023-03-13-OS.md
@@ -174,7 +174,7 @@ tags:
 
 
 ---
-### channel的底层实现原理？有阻塞的channel
+### java中 channel 的底层实现原理？有阻塞的channel
 
 ---
 ### 进程通信方式
@@ -189,6 +189,8 @@ kill会给进程发送SIGTERM信号，要求它优雅地停止服务。如果服
 
 ---
 ### 遇到较大的文件，用vim打不开怎么办？
+1. 用 view 命令，只读
+2. 用less命令，more命令
 
 ---
 ### Linux中软连接和硬连接的区别？
