--- a/_posts/interviews/2025-06-15-Thrift.md
+++ b/_posts/interviews/2025-06-15-Thrift.md
@@ -1,5 +1,5 @@
 ---
-title: 微服务&RPC面试题
+title: Thrift面试题
 author: Yu Mengchi
 categories:
   - Interview 
@@ -8,8 +8,6 @@ categories:
 tags:
   - Interview
   - 微服务
-  - MicroService
-  - SpringCloud
 ---
 
 ---
