--- a/_posts/interviews/2025-06-16-简历问题.md
+++ b/_posts/interviews/2025-06-16-简历问题.md
@@ -70,6 +70,31 @@ pid算法：
 人群自动扩量：新增一条数据流，聚合当日付费、当日目标出价、当日目标pdeepdvr、当日目标转化数等指标
 
 ---
+### 超成本、欠成本、OCPM赔付
+系统需要通过算法预估和动态调价，让"实际转化成本"围绕广告主设定的"目标成本"上下波动，但是在冷启动阶段，模型数据少、转化数据回传延迟等问题，导致波动
+
+1. 超成本：实际转化成本>广告主设定的目标成本。
+- 对于广告主：预算浪费、ROI暴跌，尤其对中小商家致命
+- 模型数据少导致平台算法预估偏差
+2. 欠成本：实际转化成本小于目标成本
+- 对于平台：优质流量被贱卖，挤压平台利润空间
+3. OCPM赔付：广告平台为了减弱广告主投放时对超成本的顾虑，同时为模型波动等问题进行兜底，平台对广告投放前14天，当超成本率大于20%时，对超出成本的部分进行赔付
+
+---
+### 混排
+比如在信息流推荐场景下，推荐系统会返回一个推荐列表，广告系统会返回一个广告列表，需要综合考虑推荐和广告的组合结果。
+
+
+---
+### 明投和暗投
+主要区别在于广告主对投放渠道的控制程度；
+
+明投是由广告主通过广告平台自主选择投放渠道，指定广告展示的媒体或关键词展示广告；
+
+暗投是由广告平台选择投放渠道，广告主无法完全掌控实际投放渠道，需要依赖平台的流量分配机制。
+
+
+---
 ### 倒排索引
 
 ---
