--- a/_posts/interviews/2023-03-14-系统设计.md
+++ b/_posts/interviews/2023-03-14-系统设计.md
@@ -309,3 +309,13 @@ result = (result << 16) | random16()
 - 数据库的连接池预热
 - redis将热点数据加载到缓存中
 - innodb存储引擎有buffer_pool，缓存池，可以进行数据库的预热。
+
+---
+### 实现分布式锁
+
+---
+### 设计聊天室，功能设计 数据库设计 并发处理 压缩消息 如何提升并发量 如何确定消息的有序和一致性 消息批量发送
+
+
+---
+### 在高并发场景下的限流 容灾 如何对业务进行取舍
