--- a/_posts/interviews/2025-06-15-Thrift.md
+++ b/_posts/interviews/2025-06-15-Thrift.md
@@ -15,14 +15,14 @@ tags:
 
 1. Transport层：TTransport接口，负责服务端和客户端传输数据，不同的实现有不同的传输方式，比如基于TCP/IP的阻塞或非阻塞
  - TSocket：基于TCP的阻塞传输
- - TFramedTransport：将消费封装成帧，适用于非阻塞服务器
+ - TFramedTransport：将消息封装成帧，适用于非阻塞服务器
  - TNonblockingTransport：支持非阻塞IO操作
 2. Protocol层：TProtocol接口，负责数据的序列化和反序列化，不同的实现有不同的序列化方式，比如二进制、JSON、XML
  - TBinaryProtocol：二进制协议，效率最高
  - TCompactProtocol：压缩版本，更紧凑，传输数据量更少
  - TJSONProtocol：JSON序列化
 3. Processor：服务端的核心，接收请求，解析参数，调用处理函数，返回结果。
-4. Server：TServer接口，负责启动服务，监听端口，接受客户端连接，处理请求。
+4. Server：TServer接口，负责启动服务，监听端口，接收客户端连接，处理请求。
  - TSimpleServer：单线程
  - TThreadPoolServer：线程池处理并发
  - TNonblockingServer：非阻塞服务器，支持高并发处理
@@ -37,6 +37,5 @@ tags:
 6. 服务端接收到请求，反序列化，调用处理器处理请求
 7. 处理器调用服务实现的方法，处理请求
 8. 服务实现返回结果，处理器将结果序列化，通过Transport发送给客户端
-9. 客户端接收到响应，反序列化，返回结果给调用者
 
 
