--- a/_posts/interviews/2023-03-14-Java.md
+++ b/_posts/interviews/2023-03-14-Java.md
@@ -596,36 +596,32 @@ java提供了两种方式来加锁:synchronized、ReentrantLock
 
 ---
 ### HashMap和ConcurrentHashMap的实现原理？区别？
-1. HashMap底层是基于数组和链表或者红黑树实现的，数组的每个位置称为桶，用于存储键值对，当多个键的哈希值相同时，也就是发生哈希冲突时，
+1. HashMap底层是基于数组和链表或者红黑树实现的，数组的每个位置是一个Entry类型，用于存储键值对，当多个键的哈希值相同时，也就是发生哈希冲突时，
 这些冲突的键值对会存储在同一个桶中，形成一个链表，如果链表长度超过一个阈值，默认是8，链表会被转换成红黑树，提高查找效率。 
  - 插入键值对时，先计算键的hash值，然后用hash值与capacity-1做与运算，这个capacity是指数组的容量，得到这个键对应的数组的下标index值。
  - 当发生hash冲突时，也就是说多个键映射到同一个桶中，HashMap会使用链表法解决冲突，在同一个桶中形成链表。如果链表长度超过8，将链表转换成红黑树；如果链表长度减少到6或者更少，将红黑树转换回链表。
- - 扩容机制：当哈希表中的元素数量超过当前容量乘以负载因子时，这个负载因子默认是0.75，HashMap会触发扩容操作。扩容时，会创建一个新的数组，容量是原数组的两倍，然后将所有键值对重新映射到新数组中。
+ - 扩容机制：当哈希表中的元素数量超过当前容量乘以负载因子(这个负载因子默认是0.75)时，HashMap会触发扩容操作。扩容时，会创建一个新的数组，容量是原数组的两倍，然后将所有键值对重新映射到新数组中。
 2. ConcurrentHashMap是线程安全的哈希表，底层结构和HashMap类似，但是为了支持线程安全，采用了分段锁或CAS操作。
- - 分段锁是在JDK早期版本中采用的方法，将数组分成多个段，每个段是一个独立的锁，使用分段锁减少锁的粒度，每个分段锁保护数组的一部分。
- - 在JDK1.8版本以后，ConcurrentHashMap使用CAS操作来更新数组中的节点，减小了锁的开销。
+ - Segment分段锁是在JDK早期版本中采用的方法，将数组分成多个段，每个段是一个独立的锁，使用分段锁减小锁的粒度，每个分段锁保护数组的一部分。默认有16个segment分段锁，segment是继承自ReentrantLock实现的，
+ - 在JDK1.8版本以后，ConcurrentHashMap使用CAS操作来更新数组中的节点，减小了锁的开销。使用CAS操作支持更高的并发度，在红黑树的创建过程会用synchronized锁定桶头节点。
 
 区别：
 * HashMap不是线程安全的，多个线程同时写入的话可能导致数据不一致或抛出异常；而ConcurrentHashMap是线程安全的；
 * HashMap在单线程环境中性能比较高，因为没有锁的开销；ConcurrentHashMap在多线程环境中性能更高，因为它通过CAS操作减少了锁的粒度；
 * 底层实现上，两个都是使用数组+链表或红黑树，但是ConcurrentHashMap增加了分段锁或CAS操作；
 * 扩容的时候ConcurrentHashMap扩容时支持并发操作，可以同时对多个段进行扩容；
-* HashMap的迭代过程中如果有修改会抛出ConcurrentModificationException异常；
+* HashMap在迭代过程中如果有修改会抛出ConcurrentModificationException异常；
 
 > 总结的话就是，如果需要在多线程环境中使用线程安全的哈希表，使用ConcurrentHashMap； 如果在单线程环境中，对性能要求较高，使用HashMap
 
 ---
 ### hashMap结构
-hashMap底层是通过Entry类型的数据+链表实现的，Entry类型有四个字段，包括key、value、hash、和next指针，每个Entry数组项都会连接一个链表，会使用拉链法解决哈希冲突。同一个链表中存放哈希值和散列桶取模运算结果相同的Entry。
+hashMap底层是通过Entry类型的数组+链表实现的，Entry类型有四个字段，包括key、value、hash、和next指针，每个Entry数组项都会连接一个链表，会使用拉链法解决哈希冲突。
 
 当链表长度大于8之后，链表会转化为红黑树。
 
 ---
 ### ConcurrentHashMap结构？get时会加锁吗？
-在jdk1.8之前，通过segment分段锁实现并发访问，segment控制多个HashEntry，默认有16个segment分段锁，segment是继承自ReentrantLock实现的，
-
-在jdk1.8之后，使用CAS操作支持更高的并发度，在红黑树的创建过程会用synchronized锁定桶头节点。
-
 get不需要加锁，其他线程的修改会立即可见，因为Entry里的value和next都有volatile修饰，确保可见性。
 
 ---
@@ -653,7 +649,8 @@ HashMap保存键值对，HashSet保存不重复的元素。
 
 ---
 ### 为什么不一开始就用红黑树？
-红黑树每个节点需要保存颜色还有左右子节点指针，插入或删除需要旋转维持平衡。
+红黑树每个节点需要保存颜色还有左右子节点指针，插入或删除节点需要旋转来维持平衡。
+
 链表每个节点只需要一个指针，数据量少的时候，链表的初始化和插入效率更高。
 
 ---
@@ -666,7 +663,7 @@ HashMap保存键值对，HashSet保存不重复的元素。
  - loadfactor是加载因子，0.75
 2. 链表长度达到8，且数组长度小于64，则优先扩容，而非树化。
 
-为什么是2的幂次：计算桶的索引的时候，可以用位运算加速计算，因为计算索引是index=(n-1)&hash，当n时2的幂次的时候，n-1的二进制全为1，这个时候&运算相当于取模运算，计算效率会更高。
+为什么是2的幂次：计算桶的索引的时候，可以用位运算加速计算，因为计算索引是index=(n-1)&hash，当n为2的幂次的时候，n-1的二进制全为1，这个时候&运算相当于取模运算，计算效率会更高。
 
 ---
 ### 为什么链表长度超过8的时候，转化为红黑树？
@@ -678,7 +675,7 @@ HashMap保存键值对，HashSet保存不重复的元素。
 1. Guava里用Map创建  Maps.newHashMap();
 2. 不可变map：new ImmutableMap.Builder().put().put().build();
 3. 有序map：new ImmutableSortedMap.Builder().build()
-4. 可以方向把value值映射到key键上，要保证value值唯一：HashBiMap.create()
+4. 可以反向把value值映射到key键上，要保证value值唯一：HashBiMap.create()
 5. 一个键关联多个值：MultiMap
 
 ---
