--- a/_posts/interviews/2025-06-16-简历问题.md
+++ b/_posts/interviews/2025-06-16-简历问题.md
@@ -131,6 +131,19 @@ DataX架构：
 3. Writer：
 
 ---
+### 基于DataX做离线数据同步，如何保证时效性、一致性？
+首先DataX主要还是用于对存量的数据做离线的同步，更多的还是用于数据备份或者离线计算的场景。
+如果需要做完存量同步之后，再同步增量数据，就需要借助其他调度工具以固定频率触发增量任务。
+比如可以用linux自带的crontab调度能力或者xxl-job这种工具。一天同步一次，还是做不到实时或近实时。
+而且dataX的job执行还需要源表字段里有自增id或者时间戳这种字段，才能用where筛选出来增量数据。在dataX的job里where条件里通过时间戳筛选。
+还有dataX的同步是基于select查询数据的，如果在源表里对之前已同步数据做了update修改，dataX没法筛选出来同步到目标表。
+
+---
+### 基于Canal做实时数据同步，如何保证时效性、一致性？
+canal本身就是基于监听mysql binlog实现的，所以源表有insert、update、delete事件的变化canal客户端都能监听到。
+如果需要处理binlog网络延迟、重复同步等异常的话，可以通过数据库唯一索引保证重复消费时的幂等性；也可以在写入数据时记录写入失败的记录稍后重试；添加数据对账机制，每天全量按主键比对保证一致性。
+
+---
 ### Canal如何使用的？什么原理？
 是阿里开源的一款基于Mysql数据库binlog的增量数据同步的中间件，
 可以订阅binlog日志，然后进行一些数据消费。
